# oxford-genai-llmops-project

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-initialise.yml  makefile.yml
assets/: ai-engineering.drawio  ml-engineering.drawio
basic_functions/: basic_functions.py  test_basic_functions.py
rag-app/: .env.example  Makefile  pyproject.toml  test.json
rag-app-simple/: basic_functions.py  pyproject.toml
rag-app-simple/tests/: test_basic_functions.py
rag-app/client/: streamlit_app.py
rag-app/deploy/bedrock/: assume-roles-cli-test.sh  test_bedrock_access.py
rag-app/deploy/docker/: docker-compose.yaml
rag-app/deploy/docker/llm-server/: docker-compose.yaml
rag-app/deploy/docker/postgres/: deduplicate.sql  docker-compose.yaml  init_pgvector.sql  pgvector2.Dockerfile
rag-app/deploy/scripts/: cleanup_ollama.sh
rag-app/papers-downloads/: papers_0_5.json  papers_10_15.json  papers_15_20.json  papers_5_10.json
rag-app/server/config/: rag.yaml
rag-app/server/src/: config.py  config_loader.py  main.py
rag-app/server/src/controllers/: generation.py  health_check.py  retrieval.py
rag-app/server/src/ingestion/: arxiv_client.py  embeddings.py  pipeline.py  utils.py
rag-app/server/src/models/: document.py
rag-app/server/src/services/: generation_service.py  query_expansion_service.py  retrieval_service.py
rag-app/tests/: conftest.py
rag-app/tests/services/: test_generation_service.py  test_retrieval_service.py
